Add favorites menu and playback controls